tests/xy_c_compile_resources/errors/uncaught1.xy
struct Error {
    code: Int;
}

def to(err: Error, :Bool) err.code != 0;

def errorProne(a: Int) -> Int | Error {
    if (a < 0) {
        error Error{10};
    }
    return 0;
}

def test(var: Int) {
    _ = errorProne(var - 1);
}
